fixed home page css dark mode bugs

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -13,7 +13,7 @@ body {
 
 .dark-mode {
     background-color: #252525;
-    color:white;
+    color: rgb(184, 184, 184);
 }
 
 .main {
