--- a/front-end/src/Styles/dataCard.scss
+++ b/front-end/src/Styles/dataCard.scss
@@ -9,7 +9,7 @@
   min-height: 50vh;
   align-items: center;
   justify-content: center;
-  border: .75em solid rgb(255, 255, 255);
+  // border: .75em solid rgb(255, 255, 255);
   padding: 2em;
   font-family: 'Open Sans', sans-serif;
 }
@@ -22,7 +22,7 @@
   overflow: hidden;
   border-radius: .5em;
   text-decoration: none;
-  background: white;
+  // background: white;
   // margin: 1em;
   padding: 1.5em .50em;
   box-shadow: 0 1.5em 1.5em -.5em rgba(#000000, .1);
@@ -140,7 +140,7 @@
     overflow: hidden;
     border-radius: 15px;
     text-decoration: none;
-    background: white;
+    // background: white;
     margin: 1em;
     padding: 0.50em 0.75em;
     box-shadow: 0 1.5em 2.5em -.5em rgba(#000000, .1);
